--- a/about.html
+++ b/about.html
@@ -66,8 +66,9 @@
 	</header>
 	<!-- End Header -->
 	<!-- ======= Hero Section ======= -->
-	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0">
-		<div class="banner-container container">
+	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
+		style="background: url(assets/img/about.jpg);">
+		<div class="banner-container container about">
 			<p class="subtext">About Us</p>
 			<h1>Committed to continuous improvement
 			</h1>
