--- a/career.html
+++ b/career.html
@@ -67,13 +67,12 @@
 	<!-- End Header -->
 	<!-- ======= Hero Section ======= -->
 	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
-		style="background: url(assets/img/career/banner.png);">
+		style="background: url(assets/img/career/banner.jpg);    background-position: top center!important;">
 		<div class="banner-container container">
-			<p class="subtext">Work with us</p>
-			<h1>Solve the biggest challenges faced by enterprises.</h1>
-			<p>Leading business transformation through High-Impact
-				digital solutions.
-			</p>
+			<p class="subtext">Careers</p>
+			<h1>Grow your career, make a difference
+			</h1>
+
 		</div>
 		</div>
 	</section>
