--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
 						</ul>
 					</li>
 					<li><a class="nav-link" href="career.html">CAREERS</a></li>
-					<li><a class="nav-link active contactus" href="contact.html">Contact</a></li>
+					<li><a class="nav-link  contactus" href="contact.html">Contact</a></li>
 				</ul>
 				<i class="bi bi-list mobile-nav-toggle"></i>
 			</nav>
@@ -67,7 +67,7 @@
 	<!-- End Header -->
 	<!-- ======= Hero Section ======= -->
 	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
-		style="background: url(assets/img/career/banner.png);">
+		style="background: url(assets/img/contact.jpg);background-position: center right !important;">
 		<div class="banner-container container">
 			<p class="subtext"></p>
 			<h1>Contact us</h1>
@@ -80,17 +80,12 @@
 	<main id="main">
 		<!-- ======= Overview Section ======= -->
 		<section class="overview">
-			<div class="container">
+			<div class="container container-xs">
 				<div class="row content">
 					<div class="col-xl-12">
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et
-							dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis
-							varius. Lorem
-							ipsum dolor sit amet,
+							Let’s talk about what’s next for your business, and how we can help you get there.
+
 						</p>
 					</div>
 				</div>
