--- a/goals/accelerate-sales.html
+++ b/goals/accelerate-sales.html
@@ -66,9 +66,8 @@
 	</header>
 	<!-- End Header -->
 	<!-- ======= Hero Section ======= -->
-	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
-		style="background: url(../assets/img/goals/accerate-sales.jpg);">
-		<div class="banner-container container">
+	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 goal-banner-1">
+		<div class="banner-container container accerate">
 			<p class="subtext">Goal</p>
 			<h1>Accelerate Revenues</h1>
 			<p>Leading business transformation through High-Impact
@@ -215,8 +214,8 @@
 				</div>
 				<div class="row content">
 					<div class="col-lg-7">
-						<div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel" data-bs-interval="5000"
-							style="overflow:hidden">
+						<div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel"
+							data-bs-interval="5000" style="overflow:hidden">
 							<div class="carousel-item  active">
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
