--- a/goals/transform-your-enterprise.html
+++ b/goals/transform-your-enterprise.html
@@ -66,9 +66,8 @@
 	</header>
 	<!-- End Header -->
 	<!-- ======= Hero Section ======= -->
-	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
-		style="background: url(../assets/img/goals/startegic-information.jpg);">
-		<div class="banner-container container">
+	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 goal-banner-6 ">
+		<div class="banner-container container enterprise">
 			<p class="subtext">Goal</p>
 			<h1>Transform your enterprise
 			</h1>
