--- a/services/digital-transformation.html
+++ b/services/digital-transformation.html
@@ -65,8 +65,7 @@
   </header>
   <!-- End Header -->
   <!-- ======= Hero Section ======= -->
-  <section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
-    style="background: url(../assets/img/services/banner/services_digital_img.jpg);">
+  <section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 service-banner-2">
     <div class="banner-container container" style="justify-content: flex-end;padding-bottom: 30px;">
       <p class="subtext">Digital transformation
       </p>
