--- a/services/engineering-pods.html
+++ b/services/engineering-pods.html
@@ -66,8 +66,7 @@
     </header>
     <!-- End Header -->
     <!-- ======= Hero Section ======= -->
-    <section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
-        style="background: url(../assets/img/services/banner/services_engineering_pods_img.jpg);">
+    <section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 service-banner-3">
         <div class="banner-container container" style="justify-content: flex-start;padding-top: 160px;">
             <p class="subtext">Services</p>
             <h1>Engineering Pods</h1>
