--- a/services/experience-design.html
+++ b/services/experience-design.html
@@ -66,8 +66,7 @@
     </header>
     <!-- End Header -->
     <!-- ======= Hero Section ======= -->
-    <section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
-        style="background: url(../assets/img/services/banner/services_experience_design_product_img_1.jpg);">
+    <section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 service-banner-4">
         <div class="banner-container container">
             <p class="subtext">Experience design
             </p>
