--- a/services/product-development.html
+++ b/services/product-development.html
@@ -30,7 +30,8 @@
 				<ul>
 					<li><a class="nav-link" href="../index.html">HOME</a></li>
 					<li><a class="nav-link" href="../about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
+					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
+								class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="../goals/transform-your-enterprise.html">Transform your enterprise
 								</a></li>
@@ -65,8 +66,7 @@
 	</header>
 	<!-- End Header -->
 	<!-- ======= Hero Section ======= -->
-	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
-		style="background: url(../assets/img/services/banner/services_prodcut_img.jpg);">
+	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 service-banner-5">
 		<div class="banner-container container">
 			<p class="subtext">Product strategy & development</p>
 			<h1>Turning problems into life-improving solutions
@@ -227,8 +227,8 @@
 				</div>
 				<div class="row content">
 					<div class="col-lg-7">
-						<div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel" data-bs-interval="5000"
-							style="overflow:hidden">
+						<div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel"
+							data-bs-interval="5000" style="overflow:hidden">
 							<div class="carousel-item  active">
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
