--- a/services/technical-audits.html
+++ b/services/technical-audits.html
@@ -66,8 +66,7 @@
     </header>
     <!-- End Header -->
     <!-- ======= Hero Section ======= -->
-    <section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
-        style="background: url(../assets/img/services/banner/services_technical_img.jpg);">
+    <section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 service-banner-6">
         <div class="banner-container container">
             <p class="subtext">Technical Audits</p>
             <h1>Augment your engineering firepower
