--- a/goals/build-better-products.html
+++ b/goals/build-better-products.html
@@ -66,8 +66,7 @@
 	</header>
 	<!-- End Header -->
 	<!-- ======= Hero Section ======= -->
-	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
-		style="background: url(../assets/img/goals/build-better-product.jpg);">
+	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 goal-banner-2">
 		<div class="banner-container container">
 			<p class="subtext">Goal</p>
 			<h1>Buid Better Product</h1>
@@ -215,8 +214,8 @@
 				</div>
 				<div class="row content">
 					<div class="col-lg-7">
-						<div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel" data-bs-interval="5000"
-							style="overflow:hidden">
+						<div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel"
+							data-bs-interval="5000" style="overflow:hidden">
 							<div class="carousel-item  active">
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
